force-app/main/default/objects/ClassEnrollment__c/ClassEnrollment__c.object-meta.xml
<CustomObject>
    <label>Class Enrollment</label>
    <nameField>
        <displayFormat>CE-{0000}</displayFormat>
        <label>Class Enrollment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Class Enrollments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>